build_errors_utf8.txt

> Configure project :
Fabric Loom: 1.14.7

> Task :compileJava FAILED
./gradlew : 
E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\AggressiveTarget
Goal.java:29: error: 
cannot assign a value 
to final variable 
targetConditions
At line:1 char:1
+ ./gradlew 
compileJava 
--console=plain > 
build_errors.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (E:\Minecra   
 ft Pr...argetCond    
itions:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
        
this.targetConditions 
= this.targetCondition
s.selector((target, 
level) -> isValidTarge
t(target));
            ^
E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\AggressiveTarget
Goal.java:81: error: 
cannot find symbol
            if 
(owner.getServer() != 
null) {
                     ^
  symbol:   method 
getServer()
  location: variable 
owner of type 
LivingEntity
E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\AggressiveTarget
Goal.java:82: error: 
cannot find symbol
                
this.cachedSimDist = o
wner.getServer().getPl
ayerList().getSimulati
onDistance();
                      
                    ^
  symbol:   method 
getServer()
  location: variable 
owner of type 
LivingEntity
E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\PersonalityFollo
wOwnerGoal.java:98: 
error: cannot find 
symbol
            if 
(owner.getServer() != 
null) {
                     ^
  symbol:   method 
getServer()
  location: variable 
owner of type 
LivingEntity
E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\PersonalityFollo
wOwnerGoal.java:99: 
error: cannot find 
symbol
                
this.cachedSimDist = o
wner.getServer().getPl
ayerList().getSimulati
onDistance();
                      
                    ^
  symbol:   method 
getServer()
  location: variable 
owner of type 
LivingEntity
5 errors

[Incubating] Problems report is available at: file:///E:/Minecraft%20Project/Vanilla%20Outsider%20Collections/Better%20Dogs/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':compileJava'.
> Compilation failed; 
see the compiler 
output below.
  E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\AggressiveTarget
Goal.java:29: error: 
cannot assign a value 
to final variable 
targetConditions
          
this.targetConditions 
= this.targetCondition
s.selector((target, 
level) -> isValidTarge
t(target));
              ^
  E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\AggressiveTarget
Goal.java:81: error: 
cannot find symbol
              if 
(owner.getServer() != 
null) {
                      
 ^
    symbol:   method 
getServer()
    location: 
variable owner of 
type LivingEntity
  E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\AggressiveTarget
Goal.java:82: error: 
cannot find symbol
                  
this.cachedSimDist = o
wner.getServer().getPl
ayerList().getSimulati
onDistance();
                      
                      
^
    symbol:   method 
getServer()
    location: 
variable owner of 
type LivingEntity
  E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\PersonalityFollo
wOwnerGoal.java:98: 
error: cannot find 
symbol
              if 
(owner.getServer() != 
null) {
                      
 ^
    symbol:   method 
getServer()
    location: 
variable owner of 
type LivingEntity
  E:\Minecraft 
Project\Vanilla 
Outsider 
Collections\Better Dog
s\src\main\java\net\va
nillaoutsider\betterdo
gs\ai\PersonalityFollo
wOwnerGoal.java:99: 
error: cannot find 
symbol
                  
this.cachedSimDist = o
wner.getServer().getPl
ayerList().getSimulati
onDistance();
                      
                      
^
    symbol:   method 
getServer()
    location: 
variable owner of 
type LivingEntity
  5 errors

* Try:
> Check your code and 
dependencies to fix 
the compilation 
error(s)
> Run with --scan to 
get full insights 
from a Build Scan 
(powered by 
Develocity).

BUILD FAILED in 2s
1 actionable task: 1 executed
